added recent pubs for DSS

--- a/_bibliography/dss.bib
+++ b/_bibliography/dss.bib
@@ -1,2 +1,110 @@
 @article{PMID:28500702, title = {Bacterial Photosensory Proteins and Their Role in Plant-pathogen Interactions.}, author = {Kraiselburd I and Moyano L and Carrau A and Tano J and Orellano EG}, doi = {10.1111/php.12754}, journal = {Photochemistry and photobiology}, month = {05}, year = {2017} } 
 
+
+@article{Kraiselburd2012ALP,
+  title={A LOV Protein Modulates the Physiological Attributes of Xanthomonas axonopodis pv. citri Relevant for Host Plant Colonization},
+  author={Ivana Kraiselburd and Anal{\'i}a I. Alet and Mar{\'i}a Laura Tondo and Silvana Petrocelli and Lucas Dami{\'a}n Daurelio and Jesica Monz{\'o}n and Oscar Adolfo Ruiz and Aba Losi and Elena G Orellano},
+  journal={PLoS ONE},
+  year={2012},
+  volume={7}
+}
+@article{Tondo2016KatGTB, 
+  title={KatG, the Bifunctional Catalase of Xanthomonas citri subsp. citri, Responds to Hydrogen Peroxide and Contributes to Epiphytic Survival on Citrus Leaves},
+  author={Mar{\'i}a Laura Tondo and Mar{\'i}a Laura Delprato and Ivana Kraiselburd and Mar{\'i}a Ver{\'o}nica Fern{\'a}ndez Zenoff and Mar{\'i}a Eugenia Far{\'i}as and Elena G Orellano},
+  journal={PLoS ONE},
+  year={2016},
+  volume={11}
+}
+@article{Kraiselburd2013TheLP,
+  title={The LOV Protein of Xanthomonas citri subsp. citri Plays a Significant Role in the Counteraction of Plant Immune Responses during Citrus Canker},
+  author={Ivana Kraiselburd and Lucas Dami{\'a}n Daurelio and Mar{\'i}a Laura Tondo and Paz Merelo and Adriana A. Cortadi and Manuel Tal{\'o}n and Francisco R Tadeo and Elena G Orellano},
+  journal={PLoS ONE},
+  year={2013},
+  volume={8}
+}
+@article{Kraiselburd2019MetabolicRO,
+  title={Metabolic reconstruction of the genome of candidate Desulfatiglans TRIP\_1 and identification of key candidate enzymes for anaerobic phenanthrene degradation},
+  author={Ivana Kraiselburd and Thomas Br{\"u}ls and Geronimo Heilmann and Farnusch Kaschani and Markus Kaiser and Rainer U. Meckenstock},
+  journal={Environmental Microbiology},
+  year={2019},
+  volume={21},
+  pages={1267 - 1286}
+}
+@article{Albarracn2016FunctionalGP,
+  title={Functional Green-Tuned Proteorhodopsin from Modern Stromatolites},
+  author={Virginia Helena Albarrac{\'i}n and Ivana Kraiselburd and Christian Bamann and Phillip G. Wood and Ernst Bamberg and Mar{\'i}a Eugenia Far{\'i}as and Wolfgang G{\"a}rtner},
+  journal={PLoS ONE},
+  year={2016},
+  volume={11}
+}
+
+@article{Kraiselburd2017BacterialPP,
+  title={Bacterial Photosensory Proteins and Their Role in Plant–pathogen Interactions},
+  author={Ivana Kraiselburd and Laura Moyano and Anal{\'i}a Carrau and Josefina Tano and Elena G Orellano},
+  journal={Photochemistry and Photobiology},
+  year={2017},
+  volume={93}
+}
+
+@article{Moyano2020BacteriophytochromesFP,
+  title={Bacteriophytochromes from Pseudomonas syringae pv. tomato DC3000 modulate the early stages of plant colonization during bacterial speck disease},
+  author={Laura Moyano and Anal{\'i}a Carrau and Silvana Petrocelli and Ivana Kraiselburd and Wolfgang G{\"a}rtner and Elena G Orellano},
+  journal={European Journal of Plant Pathology},
+  year={2020},
+  volume={156},
+  pages={695 - 712}
+}
+
+@article{Kraiselburd2015FunctionalCO,
+  title={Functional Characterization of a LOV‐Histidine Kinase Photoreceptor from Xanthomonas citri subsp. citri},
+  author={Ivana Kraiselburd and Alexander Gutt and Aba Losi and Wolfgang G{\"a}rtner and Elena G Orellano},
+  journal={Photochemistry and Photobiology},
+  year={2015},
+  volume={91}
+}
+@article{SCHMIEGE2023165458,
+title = {Analyzing community wastewater in sub-sewersheds for the small-scale detection of SARS-CoV-2 variants in a German metropolitan area},
+journal = {Science of The Total Environment},
+volume = {898},
+pages = {165458},
+year = {2023},
+issn = {0048-9697},
+doi = {https://doi.org/10.1016/j.scitotenv.2023.165458},
+url = {https://www.sciencedirect.com/science/article/pii/S0048969723040810},
+author = {Dennis Schmiege and Ivana Kraiselburd and Timo Haselhoff and Alexander Thomas and Adrian Doerr and Jule Gosch and Jens Schoth and Burkhard Teichgräber and Susanne Moebus and Folker Meyer},
+keywords = {COVID-19, Public health, Small-scale, Single nucleotide variants (SNVs), Wastewater surveillance, Whole genome sequencing},
+abstract = {Wastewater surveillance of SARS-CoV-2 proved useful, including for identifying the local appearance of newly identified virus variants. Previous studies focused on wastewater treatment plants (WWTP) with sewersheds of several hundred thousand people or at single building level, representing only a small number of people. Both approaches may prove inadequate for small-scale intra-urban inferences for early detection of emerging or novel virus variants. Our study aims (i) to analyze SARS-CoV-2 single nucleotide variants (SNVs) in wastewater of sub-sewersheds and WWTP using whole genome sequencing in order to (ii) investigate the potential of small-scale detection of novel known SARS-CoV-2 variants of concern (VOC) within a metropolitan wastewater system. We selected three sub-sewershed sampling sites, based on estimated population- and built environment-related indicators, and the inlet of the receiving WWTP in the Ruhr region, Germany. Untreated wastewater was sampled weekly between October and December 2021, with a total of 22 samples collected. SARS-CoV-2 RNA was analyzed by RT-qPCR and whole genome sequencing. For all samples, genome sequences were obtained, while only 13 samples were positive for RT-qPCR. We identified multiple specific SARS-CoV-2 SNVs in the wastewater samples of the sub-sewersheds and the WWTP. Identified SNVs reflected the dominance of VOC Delta at the time of sampling. Interestingly, we could identify an Omicron-specific SNV in one sub-sewershed. A concurrent wastewater study sampling the same WWTP detected the VOC Omicron one week later. Our observations suggest that the small-scale approach may prove particularly useful for the detection and description of spatially confined emerging or existing virus variants circulating in populations. Future studies applying small-scale sampling strategies taking into account the specific features of the wastewater system will be useful to analyze temporal and spatial variance in more detail.}
+} 
+
+@ARTICLE{10.3389/fimmu.2023.1150667,
+
+AUTHOR={Bormann, Maren and Brochhagen, Leonie and Alt, Mira and Otte, Mona and Thümmler, Laura and van de Sand, Lukas and Kraiselburd, Ivana and Thomas, Alexander and Gosch, Jule and Braß, Peer and Ciesek, Sandra and Widera, Marek and Dolff, Sebastian and Dittmer, Ulf and Witzke, Oliver and Meyer, Folker and Lindemann, Monika and Schönfeld, Andreas and Rohn, Hana and Krawczyk, Adalbert},
+
+TITLE={Immune responses in COVID-19 patients during breakthrough infection with SARS-CoV-2 variants Delta, Omicron-BA.1 and Omicron-BA.5},
+
+JOURNAL={Frontiers in Immunology},
+
+VOLUME={14},
+
+YEAR={2023},
+
+URL={https://www.frontiersin.org/articles/10.3389/fimmu.2023.1150667},
+
+DOI={10.3389/fimmu.2023.1150667},
+
+ISSN={1664-3224},
+
+ABSTRACT={<sec>BackgroundBreakthrough infections with severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) variants are increasingly observed in vaccinated individuals. Immune responses towards SARS-CoV-2 variants, particularly Omicron-BA.5, are poorly understood. We investigated the humoral and cellular immune responses of hospitalized COVID-19 patients during Delta and Omicron infection waves.</sec><sec>MethodsThe corresponding SARS-CoV-2 variant of the respective patients were identified by whole genome sequencing. Humoral immune responses were analyzed by ELISA and a cell culture-based neutralization assay against SARS-CoV-2 D614G isolate (wildtype), Alpha, Delta (AY.43) and Omicron (BA.1 and BA.5). Cellular immunity was evaluated with an IFN-γ ELISpot assay.</sec><sec>ResultsOn a cellular level, patients showed a minor IFN-γ response after stimulating PBMCs with mutated regions of SARS-CoV-2 variants. Neutralizing antibody titers against Omicron-BA.1 and especially BA.5 were strongly reduced. Double-vaccinated patients with Delta breakthrough infection showed a significantly increased neutralizing antibody response against Delta compared to double-vaccinated uninfected controls (median complete neutralization titer (NT<sub>100</sub>) 640 versus 80, p<0.05). Omicron-BA.1 infection increased neutralization titers against BA.1 in double-vaccinated patients (median NT<sub>100</sub> of 160 in patients versus 20 in controls, p=0.07) and patients that received booster vaccination (median NT<sub>100</sub> of 50 in patients versus 20 in controls, p=0.68). For boosted patients with BA.5 breakthrough infection, we found no enhancing effect on humoral immunity against SARS-CoV-2 variants.</sec><sec>ConclusionNeutralizing antibody titers against Omicron-BA.1 and especially BA.5 were strongly reduced in SARS-CoV-2 breakthrough infections. Delta and Omicron-BA.1 but not Omicron-BA.5 infections boosted the humoral immunity in double-vaccinated patients and patients with booster vaccination. Despite BA.5 breakthrough infection, those patients may still be vulnerable for reinfections with BA.5 or other newly emerging variants of concern.</sec>}
+}
+
+
+@article{LEETRILLING2022,
+title = {Identification of herbal teas and their compounds eliciting antiviral activity against SARS-CoV-2 in vitro},
+journal = {BMC Biology},
+volume = {20},
+pages = {},
+year = {2022},
+doi = {https://doi.org/10.1186/s12915-022-01468-z},
+url = {https://www.sciencedirect.com/science/article/pii/S0048969723040810},
+author = {Vu Thuy Khanh Le-Trilling, Denise Mennerich, Corinna Schuler, Roman Sakson, Julia K. Lill, Siva Swapna Kasarla, Dominik Kopczynski, Stefan Loroch, Yulia Flores-Martinez, Benjamin Katschinski, Kerstin Wohlgemuth, Matthias Gunzer, Folker Meyer, Prasad Phapale, Ulf Dittmer, Albert Sickmann, Mirko Trilling},
+}
