--- a/projects/_posts/2023-09-01-WBEready.md
+++ b/projects/_posts/2023-09-01-WBEready.md
@@ -25,7 +25,7 @@ Working with our colleagues in the [Institute for Urban Public Health]() we will
 ### Funding
 Funded by the German Ministry for Health (Bundesministerium für Gesundheit, BMG).
 <figure>
-    <img src="{{ "/img/bmg_logo.png" | relative_url }}" alt=" funded by BMG " style="width:800px;" /> 
+    <img src="{{ "/img/BMG_logo.png" | relative_url }}" alt=" funded by BMG " style="width:800px;" /> 
 </figure>
 
 
