--- a/projects/_posts/2023-09-01-WBEready.md
+++ b/projects/_posts/2023-09-01-WBEready.md
@@ -2,14 +2,14 @@
 layout: project
 title: "WBEready - Wastewater based epidemiology"
 excerpt: Exploring and optimizing the use of wastewater for public health purposes
-tags: ds dss WBE BMG
+tags: ds dss
 ---
 
 This collaborative project with the [Institute for Urban Public Health](https://inuph.uk-essen.de/), the [University Hospital Frankfurt](https://www.uni-frankfurt.de), [RWTH Aaachen](https://www.rwth-aachen.de]), [EGLV](https://www.eglv.de/) and [FiW](https://www.fiw.rwth-aachen.de/) aims to broaden the use of wastewater based 
 methods for public health purposes as well as improving said methods.
 
 <figure>
-    <img src="{{ "/img/wbelogo.png" | relative_url }}" alt=" WBEready logo" style="width:800px;" /> 
+    <img src="{{ "/img/wbeready_logo.png" | relative_url }}" alt=" WBEready logo" style="width:800px;" /> 
 </figure>
 
 ## Project aims
