added new image

--- a/projects/_posts/2023-09-01-WBEready.md
+++ b/projects/_posts/2023-09-01-WBEready.md
@@ -18,7 +18,11 @@ methods for public health purposes as well as improving said methods.
 We will work with clinicians and public health authorities to establish a catalogue of viruses and bacteria to monitor. 
 
 ### WBE-Tool Box
-We will establish a set of tools for monitoring the organisms in the catalogue in Wastewater using a both PCR and DNA sequencing based approaches. We will design novel primers for both application types.
+We will establish a set of in-vitro and in-silico tools for monitoring the organisms in the catalogue in Wastewater using a both PCR and DNA sequencing based approaches. We will design novel primers for both application types.
+
+<figure>
+    <img src="{{ "img/wbeready_lab.png" | relative_url }}" alt=" Lab work " style="width:800px;" /> 
+</figure>
 
 Working with our colleagues in the [Institute for Urban Public Health]() we will also attempt to include sampling sites inside the sewer system.
 
@@ -31,9 +35,8 @@ Funded by the German Ministry for Health (Bundesministerium für Gesundheit, BMG
 
 We apply a number of in-vitro techniques (qPCR, genomics) and computational as well as modeling approaches to work towards an early warning system for pathogens beyond SARS-CoV-2. The pathogens include Viruses and Bacteria, for Bacteria we aim at antibiotic resistance genes.
 
-
+### Team
 PI: Prof. Dr. Folker Meyer
-
 Co-PI: PD. Dr. Dr. Ricarda Schmithausen
 Co-PI: Dr. Ivana Kraiselburd
 
