added PH to WBEready

--- a/projects/_posts/2023-09-01-WBEready.md
+++ b/projects/_posts/2023-09-01-WBEready.md
@@ -5,11 +5,11 @@ excerpt: Exploring and optimizing the use of wastewater for public health purpos
 tags: ds dss
 ---
 
-This collaborative project with the [Institute for Urban Public Health](https://inuph.uk-essen.de/), the [University Hospital Frankfurt](https://www.uni-frankfurt.de), [RWTH Aaachen](https://www.rwth-aachen.de]), [EGLV](https://www.eglv.de/) and [FiW](https://www.fiw.rwth-aachen.de/) aims to broaden the use of wastewater based 
+The [WBEready project](https://www.wbeready.de) with the [Institute for Urban Public Health](https://inuph.uk-essen.de/), the [University Hospital Frankfurt](https://www.uni-frankfurt.de), [RWTH Aaachen](https://www.rwth-aachen.de]), [EGLV](https://www.eglv.de/) and [FiW](https://www.fiw.rwth-aachen.de/) aims to broaden the use of wastewater based 
 methods for public health purposes as well as improving said methods.
 
 <figure>
-    <img src="{{ "/img/wbeready_logo.png" | relative_url }}" alt=" WBEready logo" style="width:200px;" /> 
+    <img src="{{ "/img/wbeready_logo.png" | https://www.wbeready.de }}" alt=" WBEready logo" style="width:200px;" /> 
 </figure>
 
 ## Project aims
@@ -19,6 +19,10 @@ We will work with clinicians and public health authorities to establish a catalo
 
 ### WBE-Tool Box
 We will establish a set of in-vitro and in-silico tools for monitoring the organisms in the catalogue in Wastewater using a both PCR and DNA sequencing based approaches. We will design novel primers for both application types.
+
+### WBE Communications
+Establish data exchange and communications tools with the public health authorities.
+
 
 <figure>
     <img src="{{ "img/wbeready_lab.png" | relative_url }}" alt=" Lab work " style="width:800px;" /> 
