--- a/_bibliography/accr.bib
+++ b/_bibliography/accr.bib
@@ -1,3 +1,33 @@
+@article{RN194,
+   author = {Pozniak, J. and Pedri, D. and Landeloos, E. and Van Herck, Y. and Antoranz, A. and Vanwynsberghe, L. and Nowosad, A. and Roda, N. and Makhzami, S. and Bervoets, G. and Maciel, L. F. and Pulido-Vicuna, C. A. and Pollaris, L. and Seurinck, R. and Zhao, F. and Flem-Karlsen, K. and Damsky, W. and Chen, L. and Karagianni, D. and Cinque, S. and Kint, S. and Vandereyken, K. and Rombaut, B. and Voet, T. and Vernaillen, F. and Annaert, W. and Lambrechts, D. and Boecxstaens, V. and Saeys, Y. and van den Oord, J. and Bosisio, F. and Karras, P. and Shain, A. H. and Bosenberg, M. and Leucci, E. and Paschen, A. and Rambow, F. and Bechter, O. and Marine, J. C.},
+   title = {A TCF4-dependent gene regulatory network confers resistance to immunotherapy in melanoma},
+   journal = {Cell},
+   volume = {187},
+   number = {1},
+   pages = {166-183 e25},
+   ISSN = {1097-4172 (Electronic)
+0092-8674 (Linking)},
+   DOI = {10.1016/j.cell.2023.11.037},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/38181739},
+   year = {2024},
+   type = {Journal Article}
+}
+
+@article{RN195,
+   author = {Varaljai, R. and Zimmer, L. and Al-Matary, Y. and Kaptein, P. and Albrecht, L. J. and Shannan, B. and Brase, J. C. and Gusenleitner, D. and Amaral, T. and Wyss, N. and Utikal, J. and Flatz, L. and Rambow, F. and Reinhardt, H. C. and Dick, J. and Engel, D. R. and Horn, S. and Ugurel, S. and Sondermann, W. and Livingstone, E. and Sucker, A. and Paschen, A. and Zhao, F. and Placke, J. M. and Klose, J. M. and Fendler, W. P. and Thommen, D. S. and Helfrich, I. and Schadendorf, D. and Roesch, A.},
+   title = {Interleukin 17 signaling supports clinical benefit of dual CTLA-4 and PD-1 checkpoint inhibition in melanoma},
+   journal = {Nat Cancer},
+   volume = {4},
+   number = {9},
+   pages = {1292-1308},
+   ISSN = {2662-1347 (Electronic)
+2662-1347 (Linking)},
+   DOI = {10.1038/s43018-023-00610-2},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/37525015},
+   year = {2023},
+   type = {Journal Article}
+}
+
 @article{RN61,
    author = {Kruse, B. and Buzzai, A. C. and Shridhar, N. and Braun, A. D. and Gellert, S. and Knauth, K. and Pozniak, J. and Peters, J. and Dittmann, P. and Mengoni, M. and van der Sluis, T. C. and Hohn, S. and Antoranz, A. and Krone, A. and Fu, Y. and Yu, D. and Essand, M. and Geffers, R. and Mougiakakos, D. and Kahlfuss, S. and Kashkar, H. and Gaffal, E. and Bosisio, F. M. and Bechter, O. and Rambow, F. and Marine, J. C. and Kastenmuller, W. and Muller, A. J. and Tuting, T.},
    title = {CD4(+) T cell-induced inflammatory cell death controls immune-evasive tumours},
