adding 2 pubs for DS

--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -4002,3 +4002,42 @@ doi = {https://doi.org/10.1186/s12915-022-01468-z},
 url = {https://www.sciencedirect.com/science/article/pii/S0048969723040810},
 author = {Vu Thuy Khanh Le-Trilling, Denise Mennerich, Corinna Schuler, Roman Sakson, Julia K. Lill, Siva Swapna Kasarla, Dominik Kopczynski, Stefan Loroch, Yulia Flores-Martinez, Benjamin Katschinski, Kerstin Wohlgemuth, Matthias Gunzer, Folker Meyer, Prasad Phapale, Ulf Dittmer, Albert Sickmann, Mirko Trilling},
 }
+
+@ARTICLE{10.3389/fmicb.2023.1267270,
+
+AUTHOR={Hartmann, Martin  and Herzog, Claude  and Brunner, Ivano  and Stierli, Beat  and Meyer, Folker  and Buchmann, Nina  and Frey, Beat },
+
+TITLE={Long-term mitigation of drought changes the functional potential and life-strategies of the forest soil microbiome involved in organic matter decomposition},
+
+JOURNAL={Frontiers in Microbiology},
+
+VOLUME={14},
+
+YEAR={2023},
+
+URL={https://www.frontiersin.org/journals/microbiology/articles/10.3389/fmicb.2023.1267270},
+
+DOI={10.3389/fmicb.2023.1267270},
+
+ISSN={1664-302X},
+
+ABSTRACT={<p>Climate change can alter the flow of nutrients and energy through terrestrial ecosystems. Using an inverse climate change field experiment in the central European Alps, we explored how long-term irrigation of a naturally drought-stressed pine forest altered the metabolic potential of the soil microbiome and its ability to decompose lignocellulolytic compounds as a critical ecosystem function. Drought mitigation by a decade of irrigation stimulated profound changes in the functional capacity encoded in the soil microbiome, revealing alterations in carbon and nitrogen metabolism as well as regulatory processes protecting microorganisms from starvation and desiccation. Despite the structural and functional shifts from oligotrophic to copiotrophic microbial lifestyles under irrigation and the observation that different microbial taxa were involved in the degradation of cellulose and lignin as determined by a time-series stable-isotope probing incubation experiment with <sup>13</sup>C-labeled substrates, degradation rates of these compounds were not affected by different water availabilities. These findings provide new insights into the impact of precipitation changes on the soil microbiome and associated ecosystem functioning in a drought-prone pine forest and will help to improve our understanding of alterations in biogeochemical cycling under a changing climate.</p>}}
+
+
+@article{https://doi.org/10.1002/mbo3.1347,
+author = {Stach, Tom L. and Sieber, Guido and Shah, Manan and Simon, Sophie A. and Soares, Andr√© and Bornemann, Till L. V. and Plewka, Julia and K√ºnkel, Julian and Becker, Christian and Meyer, Folker and Boenigk, Jens and Probst, Alexander J.},
+title = {Temporal disturbance of a model stream ecosystem by high microbial diversity from treated wastewater},
+journal = {MicrobiologyOpen},
+volume = {12},
+number = {2},
+pages = {e1347},
+keywords = {ARG, freshwater, mesocosm, metagenomics, microbiome, stressor},
+doi = {https://doi.org/10.1002/mbo3.1347},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/mbo3.1347},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/mbo3.1347},
+abstract = {Abstract Microbial communities in freshwater streams play an essential role in ecosystem functioning via biogeochemical cycling. Yet, the impacts of treated wastewater influx into stream ecosystems on microbial strain diversity remain mostly unexplored. Here, we coupled full-length 16S ribosomal RNA¬†gene Nanopore sequencing and strain-resolved metagenomics to investigate the impact of treated wastewater on a mesocosm system (AquaFlow) run with restored river water. Over 10 days, community Bray‚ÄìCurtis dissimilarities between treated and control mesocosm decreased (0.57‚Äâ¬±‚Äâ0.058 to 0.26‚Äâ¬±‚Äâ0.046) based on ribosomal protein S3 gene clustering, finally converging to nearly identical communities. Similarly, strain-resolved metagenomics revealed a high diversity of bacteria and viruses after the introduction of treated wastewater; these microbes also decreased over time resulting in the same strain clusters in control and treatment at the end of the experiment. Specifically, 39.2\% of viral strains detected in all samples were present after the introduction of treated wastewater only. Although bacteria present at low abundance in the treated wastewater introduced additional antibiotic resistance genes, signals of naturally occurring ARG-encoding organisms resembled the resistome at the endpoint. Our results suggest that the previously stressed freshwater stream and its microbial community are resilient to a substantial introduction of treated wastewater.},
+year = {2023}
+}
+
+
+
