added paper added Shivo

--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -4041,3 +4041,17 @@ year = {2023}
 
 
 
+@article{SCHMIEGE2024114379,
+title = {Small-scale wastewater-based epidemiology (WBE) for infectious diseases and antibiotic resistance: A scoping review},
+journal = {International Journal of Hygiene and Environmental Health},
+volume = {259},
+pages = {114379},
+year = {2024},
+issn = {1438-4639},
+doi = {https://doi.org/10.1016/j.ijheh.2024.114379},
+url = {https://www.sciencedirect.com/science/article/pii/S1438463924000609},
+author = {Dennis Schmiege and Timo Haselhoff and Alexander Thomas and Ivana Kraiselburd and Folker Meyer and Susanne Moebus},
+keywords = {Antimicrobial resistance, Building, Neighborhood, Public health, Virus, Wastewater surveillance},
+abstract = {Wastewater analysis can serve as a source of public health information. In recent years, wastewater-based epidemiology (WBE) has emerged and proven useful for the detection of infectious diseases. However, insights from the wastewater treatment plant do not allow for the small-scale differentiation within the sewer system that is needed to analyze the target population under study in more detail. Small-scale WBE offers several advantages, but there has been no systematic overview of its application. The aim of this scoping review is to provide a comprehensive overview of the current state of knowledge on small-scale WBE for infectious diseases, including methodological considerations for its application. A systematic database search was conducted, considering only peer-reviewed articles. Data analyses included quantitative summary and qualitative narrative synthesis. Of 2130 articles, we included 278, most of which were published since 2020. The studies analyzed wastewater at the building level (n = 203), especially healthcare (n = 110) and educational facilities (n = 80), and at the neighborhood scale (n = 86). The main analytical parameters were viruses (n = 178), notably SARS-CoV-2 (n = 161), and antibiotic resistance (ABR) biomarkers (n = 99), often analyzed by polymerase chain reaction (PCR), with DNA sequencing techniques being less common. In terms of sampling techniques, active sampling dominated. The frequent lack of detailed information on the specification of selection criteria and the characterization of the small-scale sampling sites was identified as a concern. In conclusion, based on the large number of studies, we identified several methodological considerations and overarching strategic aspects for small-scale WBE. An enabling environment for small-scale WBE requires inter- and transdisciplinary knowledge sharing across countries. Promoting the adoption of small-scale WBE will benefit from a common international conceptualization of the approach, including standardized and internationally accepted terminology. In particular, the development of good WBE practices for different aspects of small-scale WBE is warranted. This includes the establishment of guidelines for a comprehensive characterization of the local sewer system and its sub-sewersheds, and transparent reporting to ensure comparability of small-scale WBE results.}
+}[11:38:03] z5:~/git/ikim-website/_bibliography 
+
