--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -4055,3 +4055,26 @@ keywords = {Antimicrobial resistance, Building, Neighborhood, Public health, Vir
 abstract = {Wastewater analysis can serve as a source of public health information. In recent years, wastewater-based epidemiology (WBE) has emerged and proven useful for the detection of infectious diseases. However, insights from the wastewater treatment plant do not allow for the small-scale differentiation within the sewer system that is needed to analyze the target population under study in more detail. Small-scale WBE offers several advantages, but there has been no systematic overview of its application. The aim of this scoping review is to provide a comprehensive overview of the current state of knowledge on small-scale WBE for infectious diseases, including methodological considerations for its application. A systematic database search was conducted, considering only peer-reviewed articles. Data analyses included quantitative summary and qualitative narrative synthesis. Of 2130 articles, we included 278, most of which were published since 2020. The studies analyzed wastewater at the building level (n = 203), especially healthcare (n = 110) and educational facilities (n = 80), and at the neighborhood scale (n = 86). The main analytical parameters were viruses (n = 178), notably SARS-CoV-2 (n = 161), and antibiotic resistance (ABR) biomarkers (n = 99), often analyzed by polymerase chain reaction (PCR), with DNA sequencing techniques being less common. In terms of sampling techniques, active sampling dominated. The frequent lack of detailed information on the specification of selection criteria and the characterization of the small-scale sampling sites was identified as a concern. In conclusion, based on the large number of studies, we identified several methodological considerations and overarching strategic aspects for small-scale WBE. An enabling environment for small-scale WBE requires inter- and transdisciplinary knowledge sharing across countries. Promoting the adoption of small-scale WBE will benefit from a common international conceptualization of the approach, including standardized and internationally accepted terminology. In particular, the development of good WBE practices for different aspects of small-scale WBE is warranted. This includes the establishment of guidelines for a comprehensive characterization of the local sewer system and its sub-sewersheds, and transparent reporting to ensure comparability of small-scale WBE results.}
 }[11:38:03] z5:~/git/ikim-website/_bibliography 
 
+
+
+
+@inproceedings{webetal,
+author = {Weber, Frank-Andreas and Schoth, J. and Jagemann, P. and Schmidt, T. and Widera, Marek and Wilhelm, Alexander and Meyer, F. and Schmithausen, Ricarda and Kraiselburd, Ivana and Moebus, S. and Schmiege, Dennis and Wintgens, T. and Linnemann, V. and Wolber, J.-L},
+year = {2024},
+month = {04},
+pages = {},
+title = {WBEready – Wastewater-based epidemiology and preparedness: research needs for an adaptive monitoring in the Public Health Service},
+volume = {86},
+journal = {Das Gesundheitswesen},
+doi = {10.1055/s-0044-1781837}
+
+@inproceedings{Sachse24,
+author = {Sachse, S. and Anastasiou, Olympia and Elsner, Carina and Ross, R. and Goretzki, S. and Goer, S. and Nagel, R. and Koldehoff, M. and Savin, Mykhailo and Döhla, Manuel and Mutters, Nico and Thomas, Alexander and Kraiselburd, Ivana and Meyer, F. and Schmithausen, Ricarda and Dittmer, Ulf},
+year = {2024},
+month = {04},
+pages = {},
+title = {From airport to school to hospital – the story of a rare SARS-CoV-2 virus variant import},
+volume = {86},
+journal = {Das Gesundheitswesen},
+doi = {10.1055/s-0044-1781946}
+
