--- a/projects/_posts/2023-09-01-WBEready.md
+++ b/projects/_posts/2023-09-01-WBEready.md
@@ -9,7 +9,7 @@ The [WBEready project](https://www.wbeready.de) with the [Institute for Urban Pu
 methods for public health purposes as well as improving said methods.
 
 <figure>
-    <img src="{{ "/img/wbeready_logo.png" | https://www.wbeready.de }}" alt=" WBEready logo" style="width:200px;" /> 
+    <img src="{{ "/img/wbeready_logo.png" | relative_url }}" alt=" WBEready logo" style="width:200px;" /> 
 </figure>
 
 ## Project aims
@@ -25,7 +25,7 @@ Establish data exchange and communications tools with the public health authorit
 
 
 <figure>
-    <img src="{{ "img/wbeready_lab.png" | relative_url }}" alt=" Lab work " style="width:800px;" /> 
+    <img src="{{ "/img/wbeready_lab.png" | relative_url }}" alt=" Lab work " style="width:800px;" /> 
 </figure>
 
 Working with our colleagues in the [Institute for Urban Public Health]() we will also attempt to include sampling sites inside the sewer system.
