--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -4079,3 +4079,18 @@ volume = {86},
 journal = {Das Gesundheitswesen},
 doi = {10.1055/s-0044-1781946}
 }
+
+@article{RN5113,
+   author = {Thomas, Alexander and Battenfeld, Thomas and Kraiselburd, Ivana and Anastasiou, Olympia and Dittmer, Ulf and Dörr, Ann-Kathrin and Dörr, Adrian and Elsner, Carina and Gosch, Jule and Le-Trilling, Vu Thuy Khanh and Magin, Simon and Scholtysik, René and Yilmaz, Pelin and Trilling, Mirko and Schöler, Lara and Köster, Johannes and Meyer, Folker},
+   title = {UnCoVar: a reproducible and scalable workflow for transparent and robust virus variant calling and lineage assignment using SARS-CoV-2 as an example},
+   journal = {BMC Genomics},
+   volume = {25},
+   number = {1},
+   pages = {647},
+   ISSN = {1471-2164},
+   DOI = {10.1186/s12864-024-10539-0},
+   url = {https://doi.org/10.1186/s12864-024-10539-0},
+   year = {2024},
+   type = {Journal Article}
+}
+
