added vaccines paper

--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -4094,3 +4094,17 @@ doi = {10.1055/s-0044-1781946}
    type = {Journal Article}
 }
 
+@Article{vaccines12070785,
+AUTHOR = {Cherneha, Maxim and Zydek, Isabel and Braß, Peer and Korth, Johannes and Jansen, Sarah and Esser, Stefan and Karsten, Christina B. and Meyer, Folker and Kraiselburd, Ivana and Dittmer, Ulf and Lindemann, Monika and Horn, Peter A. and Witzke, Oliver and Thümmler, Laura and Krawczyk, Adalbert},
+TITLE = {Immunogenicity of the Monovalent Omicron XBB.1.5-Adapted BNT162b2 COVID-19 Vaccine in People Living with HIV (PLWH)},
+JOURNAL = {Vaccines},
+VOLUME = {12},
+YEAR = {2024},
+NUMBER = {7},
+ARTICLE-NUMBER = {785},
+URL = {https://www.mdpi.com/2076-393X/12/7/785},
+ISSN = {2076-393X},
+ABSTRACT = {While SARS-CoV-2 has transitioned to an endemic phase, infections caused by newly emerged variants continue to result in severe, and sometimes fatal, outcomes or lead to long-term COVID-19 symptoms. Vulnerable populations, such as PLWH, face an elevated risk of severe illness. Emerging variants of SARS-CoV-2, including numerous Omicron subvariants, are increasingly associated with breakthrough infections. Adapting mRNA vaccines to these new variants may offer improved protection against Omicron for vulnerable individuals. In this study, we examined humoral and cellular immune responses before and after administering adapted booster vaccinations to PLWH, alongside a control group of healthy individuals. Four weeks following booster vaccination, both groups exhibited a significant increase in neutralizing antibodies and cellular immune responses. Notably, there was no significant difference in humoral immune response between PLWH and the healthy controls. Immune responses declined rapidly in both groups three months post vaccination. However, PLWH still showed significantly increased neutralizing antibody titers even after three months. These findings demonstrate the efficacy of the adapted vaccination regimen. The results suggest that regular booster immunizations may be necessary to sustain protective immunity.},
+DOI = {10.3390/vaccines12070785}
+}
+
