--- a/_bibliography/accr.bib
+++ b/_bibliography/accr.bib
@@ -1,3 +1,17 @@
+@article{RN197,
+   author = {Lu, Y. and Travnickova, J. and Badonyi, M. and Rambow, F. and Coates, A. and Khan, Z. and Marques, J. and Murphy, L. C. and Garcia-Martinez, P. and Marais, R. and Louphrasitthiphol, P. and Chan, A. H. Y. and Schofield, C. J. and von Kriegsheim, A. and Marsh, J. A. and Pavet, V. and Sansom, O. J. and Illingworth, R. S. and Patton, E. E.},
+   title = {ALDH1A3-acetaldehyde metabolism potentiates transcriptional heterogeneity in melanoma},
+   journal = {Cell Rep},
+   volume = {43},
+   number = {7},
+   pages = {114406},
+   ISSN = {2211-1247 (Electronic)},
+   DOI = {10.1016/j.celrep.2024.114406},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/38963759},
+   year = {2024},
+   type = {Journal Article}
+}
+
 @article{RN194,
    author = {Pozniak, J. and Pedri, D. and Landeloos, E. and Van Herck, Y. and Antoranz, A. and Vanwynsberghe, L. and Nowosad, A. and Roda, N. and Makhzami, S. and Bervoets, G. and Maciel, L. F. and Pulido-Vicuna, C. A. and Pollaris, L. and Seurinck, R. and Zhao, F. and Flem-Karlsen, K. and Damsky, W. and Chen, L. and Karagianni, D. and Cinque, S. and Kint, S. and Vandereyken, K. and Rombaut, B. and Voet, T. and Vernaillen, F. and Annaert, W. and Lambrechts, D. and Boecxstaens, V. and Saeys, Y. and van den Oord, J. and Bosisio, F. and Karras, P. and Shain, A. H. and Bosenberg, M. and Leucci, E. and Paschen, A. and Rambow, F. and Bechter, O. and Marine, J. C.},
    title = {A TCF4-dependent gene regulatory network confers resistance to immunotherapy in melanoma},
