--- a/_bibliography/accr.bib
+++ b/_bibliography/accr.bib
@@ -1,3 +1,15 @@
+@article{RN262,
+   author = {Dobersalske, C. and Rauschenbach, L. and Hua, Y. and Berliner, C. and Steinbach, A. and Gruneboom, A. and Kokkaliaris, K. D. and Heiland, D. H. and Berger, P. and Langer, S. and Tan, C. L. and Stenzel, M. and Landolsi, S. and Weber, F. and Darkwah Oppong, M. and Werner, R. A. and Gull, H. and Schroder, T. and Linsenmann, T. and Buck, A. K. and Gunzer, M. and Stuschke, M. and Keyvani, K. and Forsting, M. and Glas, M. and Kipnis, J. and Steindler, D. A. and Reinhardt, H. C. and Green, E. W. and Platten, M. and Tasdogan, A. and Herrmann, K. and Rambow, F. and Cima, I. and Sure, U. and Scheffler, B.},
+   title = {Cranioencephalic functional lymphoid units in glioblastoma},
+   journal = {Nat Med},
+   ISSN = {1546-170X (Electronic)
+1078-8956 (Linking)},
+   DOI = {10.1038/s41591-024-03152-x},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/39085419},
+   year = {2024},
+   type = {Journal Article}
+}
+
 @article{RN197,
    author = {Lu, Y. and Travnickova, J. and Badonyi, M. and Rambow, F. and Coates, A. and Khan, Z. and Marques, J. and Murphy, L. C. and Garcia-Martinez, P. and Marais, R. and Louphrasitthiphol, P. and Chan, A. H. Y. and Schofield, C. J. and von Kriegsheim, A. and Marsh, J. A. and Pavet, V. and Sansom, O. J. and Illingworth, R. S. and Patton, E. E.},
    title = {ALDH1A3-acetaldehyde metabolism potentiates transcriptional heterogeneity in melanoma},
