adding servicegroup layout adding servicegroup mvgcore fixing ds.md typos

--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -3915,12 +3915,14 @@ snakemake},
 
    
 @article{le2022identification,
-  title={Identification of herbal teas and their compounds eliciting antiviral activity against SARS-CoV-2 in vitro},
-  author={Le-Trilling, Vu Thuy Khanh and Mennerich, Denise and Schuler, Corinna and Sakson, Roman and Lill, Julia K. and Kasarla, Siva Swapna and Kopczynski, Dominik and Loroch, Stefan and Flores-Martinez, Yulia and Katschinski, Benjamin and Wohlgemuth, Kerstin and  Gunzer, Matthias and  Meyer, Folker and  Phapale, Prasad, and  Dittmer, Ulf and  Sickmann, Albert and  Trilling, Mirko},
-  journal={BMC Biology},
-  volume={20},
-  number={264},
-  year={2022}
+  title = {Identification of herbal teas and their compounds eliciting antiviral activity against SARS-CoV-2 in vitro},
+  author = {Le-Trilling, Vu Thuy Khanh and Mennerich, Denise and Schuler, Corinna and Sakson, Roman and Lill, Julia K. and Kasarla, Siva Swapna and Kopczynski, Dominik and Loroch, Stefan and Flores-Martinez, Yulia and Katschinski, Benjamin and Wohlgemuth, Kerstin and Gunzer, Matthias and Meyer, Folker and Phapale, Prasad, and Dittmer, Ulf and Sickmann, Albert and Trilling, Mirko},
+  journal = {BMC Biology},
+  volume = {20},
+  number = {264},
+  year = {2022},
+  doi = {https://doi.org/10.1186/s12915-022-01468-z},
+  url = {https://www.sciencedirect.com/science/article/pii/S0048969723040810}
 }
 
 @article{mahgoub2022iris,
@@ -3992,16 +3994,7 @@ ABSTRACT={<sec>BackgroundBreakthrough infections with severe acute respiratory s
 }
 ~          
 
-@article{LEETRILLING2022,
-title = {Identification of herbal teas and their compounds eliciting antiviral activity against SARS-CoV-2 in vitro},
-journal = {BMC Biology},
-volume = {20},
-pages = {},
-year = {2022},
-doi = {https://doi.org/10.1186/s12915-022-01468-z},
-url = {https://www.sciencedirect.com/science/article/pii/S0048969723040810},
-author = {Vu Thuy Khanh Le-Trilling, Denise Mennerich, Corinna Schuler, Roman Sakson, Julia K. Lill, Siva Swapna Kasarla, Dominik Kopczynski, Stefan Loroch, Yulia Flores-Martinez, Benjamin Katschinski, Kerstin Wohlgemuth, Matthias Gunzer, Folker Meyer, Prasad Phapale, Ulf Dittmer, Albert Sickmann, Mirko Trilling},
-}
+
 
 @ARTICLE{10.3389/fmicb.2023.1267270,
 
