--- a/_bibliography/accr.bib
+++ b/_bibliography/accr.bib
@@ -1,3 +1,30 @@
+@article{RN174,
+   author = {Shelton, S. D. and House, S. and Martins Nascentes Melo, L. and Ramesh, V. and Chen, Z. and Wei, T. and Wang, X. and Llamas, C. B. and Venigalla, S. S. K. and Menezes, C. J. and Allies, G. and Krystkiewicz, J. and Rosler, J. and Meckelmann, S. W. and Zhao, P. and Rambow, F. and Schadendorf, D. and Zhao, Z. and Gill, J. G. and DeBerardinis, R. J. and Morrison, S. J. and Tasdogan, A. and Mishra, P.},
+   title = {Pathogenic mitochondrial DNA mutations inhibit melanoma metastasis},
+   journal = {Sci Adv},
+   volume = {10},
+   number = {44},
+   pages = {eadk8801},
+   ISSN = {2375-2548 (Electronic)
+2375-2548 (Linking)},
+   DOI = {10.1126/sciadv.adk8801},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/39485847},
+   year = {2024},
+   type = {Journal Article}
+}
+
+@article {Hua2024.08.01.606144,
+	author = {Hua, Yichao and Weng, Linqian and Zhao, Fang and Rambow, Florian},
+	title = {SeuratExtend: Streamlining Single-Cell RNA-Seq Analysis Through an Integrated and Intuitive Framework},
+	elocation-id = {2024.08.01.606144},
+	year = {2024},
+	doi = {10.1101/2024.08.01.606144},
+	publisher = {Cold Spring Harbor Laboratory},
+	URL = {https://www.biorxiv.org/content/early/2024/08/04/2024.08.01.606144},
+	eprint = {https://www.biorxiv.org/content/early/2024/08/04/2024.08.01.606144.full.pdf},
+	journal = {bioRxiv}
+}
+
 @article{RN262,
    author = {Dobersalske, C. and Rauschenbach, L. and Hua, Y. and Berliner, C. and Steinbach, A. and Gruneboom, A. and Kokkaliaris, K. D. and Heiland, D. H. and Berger, P. and Langer, S. and Tan, C. L. and Stenzel, M. and Landolsi, S. and Weber, F. and Darkwah Oppong, M. and Werner, R. A. and Gull, H. and Schroder, T. and Linsenmann, T. and Buck, A. K. and Gunzer, M. and Stuschke, M. and Keyvani, K. and Forsting, M. and Glas, M. and Kipnis, J. and Steindler, D. A. and Reinhardt, H. C. and Green, E. W. and Platten, M. and Tasdogan, A. and Herrmann, K. and Rambow, F. and Cima, I. and Sure, U. and Scheffler, B.},
    title = {Cranioencephalic functional lymphoid units in glioblastoma},
